Penambahan Fitur Export Laporan

--- a/src/InventarisApp.form
+++ b/src/InventarisApp.form
@@ -534,6 +534,9 @@
                   <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tableInventarisMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
